force-app/main/default/objects/Training__c/fields/ClassKey__c.field-meta.xml
<CustomField>
    <fullName>ClassKey__c</fullName>
    <label>Class_Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>