force-app/main/default/objects/Training__c/fields/DeliveryMode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMode__c</fullName>
    <description>Method in which the training course is delivered to the members</description>
    <label>Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
                <isActive>false</isActive>
                <label>Classroom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>