force-app/main/default/objects/Training__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <description>Training end date and time</description>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>