force-app/main/default/objects/Training__c/fields/EnrollmentType__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentType__c</fullName>
    <description>delete</description>
    <label>zEnrollmentType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>