force-app/main/default/objects/Training__c/fields/GuaranteedToRun__c.field-meta.xml
<CustomField>
    <fullName>GuaranteedToRun__c</fullName>
    <label>Guaranteed To Run</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>