force-app/main/default/objects/Training__c/fields/Is_Dummy_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Dummy_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dummy Product</label>
    <type>Checkbox</type>
</CustomField>