force-app/main/default/objects/Training__c/fields/NS_Class__c.field-meta.xml
<CustomField>
    <fullName>NS_Class__c</fullName>
    <label>NS Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Netsuite_Class</valueSetName>
    </valueSet>
</CustomField>