force-app/main/default/objects/Training__c/fields/SugarTrainingID__c.field-meta.xml
<CustomField>
    <fullName>SugarTrainingID__c</fullName>
    <externalId>true</externalId>
    <label>Sugar Training ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>