force-app/main/default/objects/Training__c/fields/TI_Id__c.field-meta.xml
<CustomField>
    <fullName>TI_Id__c</fullName>
    <externalId>true</externalId>
    <label>TI Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>