force-app/main/default/objects/Training__c/listViews/Active_Training.listView-meta.xml
<ListView>
    <fullName>Active_Training</fullName>
    <columns>NAME</columns>
    <columns>DeliveryMode__c</columns>
    <columns>Enrollment_Type__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>End_DateTime__c</columns>
    <columns>Status__c</columns>
    <columns>TI_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Training</label>
</ListView>