force-app/main/default/objects/Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>End_DateTime__c</columns>
    <columns>DeliveryMode__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>