force-app/main/default/objects/Training__c/listViews/Partner_Trainings.listView-meta.xml
<ListView>
    <fullName>Partner_Trainings</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>End_DateTime__c</columns>
    <columns>DeliveryMode__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enrollment_Type__c</field>
        <operation>equals</operation>
        <value>Partner</value>
    </filters>
    <label>Partner Trainings</label>
</ListView>